# rapids-exploration

./: Makefile  README.md  pyproject.toml
rapids_exploration/: constants.py  custom_types.py
rapids_exploration/df_operations/: df_operation.py
rapids_exploration/df_operations/pd_df_operations/: pd_df_operation.py
rapids_exploration/df_operations/pl_df_operations/: pl_df_operation.py
rapids_exploration/df_operations/pl_lf_operations/: pl_lf_operation.py
rapids_exploration/testing_utils/: perf_tester.py  test_res.py
tests/test_testing_utils/: conftest.py  test_test_res.py  test_trial_runner.py
tests/utils/: concrete_df_ops.py
